--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
-        "axios": "^1.1.2",
+        "axios": "^0.25.0",
         "bootstrap": "^5.1.3",
         "cross-env": "^7.0",
         "laravel-mix": "^6.0.0-beta.17",
@@ -24,6 +24,7 @@
     "dependencies": {
         "vue": "^3.2.36",
         "vue-router": "^4.1.5",
-        "vue-template-compiler": "^2.7.12"
+        "vue-template-compiler": "^2.7.12",
+        "vuex": "^4.0.0"
     }
 }
