--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
         "@popperjs/core": "^2.10.1",
         "datatables.net": "^1.11.3",
         "laravel-vue-pagination": "^2.3.1",
-        "vue": "^3.2.36",
         "sweetalert": "^2.1.2",
+        "vue": "^3.2.36",
+        "vue-next-select": "^2.10.4",
         "vue-router": "^4.1.5",
+        "vue-select": "^3.20.0",
         "vue-template-compiler": "^2.7.12",
         "vuex": "^4.0.0"
     }
