--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "vue-router": "^4.1.5",
         "vue-select": "^3.20.0",
         "vue-template-compiler": "^2.7.12",
+        "vuetify": "^2.6.12",
         "vuex": "^4.0.0"
     }
 }
