--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
         "@popperjs/core": "^2.10.1",
         "datatables.net": "^1.11.3",
         "laravel-vue-pagination": "^2.3.1",
-        "vue": "^3.2.36",
         "sweetalert": "^2.1.2",
+        "vue": "^3.2.36",
+        "vue-loading-overlay": "^5.0.3",
         "vue-router": "^4.1.5",
         "vue-template-compiler": "^2.7.12",
         "vuex": "^4.0.0"
